--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,10 @@ variables:
 
 steps:
 - task: NuGetToolInstaller@1
-
+       inputs:
+    command: test
+    projects: '**/*test/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
